# gradlog

./: .gitignore  LICENSE-COMMERCIAL  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  publish-sdk.yml
backend/: Dockerfile  go.mod  go.sum
backend/internal/database/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
backend/internal/handlers/: experiments.go  projects.go  runs.go
frontend/: index.html  serve.py
gradlog/: .env.example  Dockerfile
gradlog/cmd/gradlog/: main.go
gradlog/internal/config/: config.go
gradlog/internal/database/: database.go
gradlog/internal/handlers/: api_keys.go  artifacts.go  auth.go  experiments.go  metrics.go  projects.go  runs.go
gradlog/internal/middleware/: auth.go  cors.go
gradlog/internal/models/: models.go
gradlog/internal/router/: router.go
gradlog/internal/storage/: local.go
gradlog/internal/ui/: ui.go
sdk/python/: README.md  pyproject.toml
sdk/python/gradlog/: __init__.py  client.py  exceptions.py  experiment.py  project.py  run.py
