[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradlog"
dynamic = ["version"]
description = "Python SDK for Gradlog ML experiment tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Efe Sirin"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mlops", "machine-learning", "experiment-tracking", "ml"]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gradlog/gradlog"
Documentation = "https://github.com/gradlog/gradlog#readme"
Repository = "https://github.com/gradlog/gradlog"
Issues = "https://github.com/gradlog/gradlog/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gradlog*"]

[tool.setuptools.dynamic]
version = {attr = "gradlog.version.__version__"}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
